--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.9.6",
+    "mongoose": "^5.9.7",
     "mongodb": "^3.5.5",
-    "body-parser": "^1.19.0",
+    "body-parser": "можно не использовать, если используется express 4.16 и выше", 
+    "body-parser": "^1.19.0", 
     "cors": "^2.8.5",
     "shortid": "^2.2.15"
   },
